@@ -15,7 +15,8 @@
  */
 package io.micronaut.annotation.processing;
 
-import edu.umd.cs.findbugs.annotations.Nullable;
+import io.micronaut.core.annotation.Nullable;
+import io.micronaut.core.reflect.ReflectionUtils;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.inject.writer.AbstractClassWriterOutputVisitor;
 import io.micronaut.inject.writer.ClassGenerationException;
@@ -27,11 +28,14 @@ import javax.tools.FileObject;
 import javax.tools.JavaFileObject;
 import javax.tools.StandardLocation;
 import java.io.FileNotFoundException;
+import java.io.FilterOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.Reader;
 import java.io.Writer;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.net.URI;
 import java.util.*;
 
@@ -39,14 +43,27 @@ import java.util.*;
  * An implementation of {@link io.micronaut.inject.writer.ClassWriterOutputVisitor} for annotation processing.
  *
  * @author Graeme Rocher
- * @since 1.
+ * @since 1.0
  */
 public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutputVisitor {
 
     private final Filer filer;
-    private final Map<String, Optional<GeneratedFile>> metaInfFiles = new HashMap<>();
-    private final Map<String, FileObject> openedFiles = new HashMap<>();
-    private final Map<String, Optional<GeneratedFile>> generatedFiles = new HashMap<>();
+    private final Map<String, Optional<GeneratedFile>> metaInfFiles = new LinkedHashMap<>();
+    private final Map<String, FileObject> openedFiles = new LinkedHashMap<>();
+    private final Map<String, Optional<GeneratedFile>> generatedFiles = new LinkedHashMap<>();
+    private final boolean isGradleFiler;
+
+    private static final Field FILTER_OUTPUT_STREAM_OUT = ReflectionUtils.findField(FilterOutputStream.class, "out")
+            .map(field -> {
+                try {
+                    addOpenJavaModules(FilterOutputStream.class, AnnotationProcessingOutputVisitor.class);
+                    field.setAccessible(true);
+                    return field;
+                } catch (Exception e) {
+                    return null;
+                }
+            })
+            .orElse(null);
 
     /**
      * @param filer The {@link Filer} for creating new files
@@ -54,6 +71,25 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
     public AnnotationProcessingOutputVisitor(Filer filer) {
         super(isEclipseFiler(filer));
         this.filer = filer;
+        final String filerName = filer.getClass().getName();
+        this.isGradleFiler = filerName.startsWith("org.gradle.api") || filerName.startsWith("org.jetbrains.kotlin.kapt3");
+    }
+
+    //--add-opens=java.base/$hostPackageName=ALL-UNNAMED
+    private static void addOpenJavaModules(Class<?> hostClass, Class<?> targetClass) {
+        // For Java 9 and above
+        try {
+            Method getModule = Class.class.getMethod("getModule");
+            Class<?> module = getModule.getReturnType();
+            Method getPackageName = Class.class.getMethod("getPackageName");
+            Method addOpens = module.getMethod("addOpens", String.class, module);
+            Object hostModule = getModule.invoke(hostClass);
+            String hostPackageName = (String) getPackageName.invoke(hostClass);
+            Object actionModule = getModule.invoke(targetClass);
+            addOpens.invoke(hostModule, hostPackageName, actionModule);
+        } catch (Exception e) {
+            // Ignore
+        }
     }
 
     private static boolean isEclipseFiler(Filer filer) {
@@ -70,19 +106,76 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
         JavaFileObject javaFileObject;
         Element[] nativeOriginatingElements;
         if (ArrayUtils.isNotEmpty(originatingElements)) {
-            List<Element> list = new ArrayList<>(originatingElements.length);
-            for (io.micronaut.inject.ast.Element originatingElement : originatingElements) {
-                Object nativeType = originatingElement.getNativeType();
+            if (isGradleFiler) {
+                // gradle filer only support single originating element for isolating processors
+                final io.micronaut.inject.ast.Element e = originatingElements[0];
+                final Object nativeType = e.getNativeType();
                 if (nativeType instanceof Element) {
-                    list.add((Element) nativeType);
+                    nativeOriginatingElements = new Element[] { (Element) nativeType };
+                } else {
+                    nativeOriginatingElements = new Element[0];
                 }
+            } else {
+                // other compilers like the IntelliJ compiler support multiple
+                List<Element> list = new ArrayList<>(originatingElements.length);
+                for (io.micronaut.inject.ast.Element originatingElement : originatingElements) {
+                    Object nativeType = originatingElement.getNativeType();
+                    if (nativeType instanceof Element) {
+                        list.add((Element) nativeType);
+                    }
+                }
+                nativeOriginatingElements = list.toArray(new Element[0]);
             }
-            nativeOriginatingElements = list.toArray(new Element[0]);
         } else {
             nativeOriginatingElements = new Element[0];
         }
         javaFileObject = filer.createClassFile(classname, nativeOriginatingElements);
-        return javaFileObject.openOutputStream();
+        OutputStream os = javaFileObject.openOutputStream();
+        return unwrapFilterOutputStream(os);
+    }
+
+    private OutputStream unwrapFilterOutputStream(OutputStream os) {
+        // https://bugs.openjdk.java.net/browse/JDK-8255729
+        // FilterOutputStream and JavacFiler$FilerOutputStream is always using write(int) and killing performance, unwrap if possible
+        if (FILTER_OUTPUT_STREAM_OUT != null && os instanceof FilterOutputStream) {
+            try {
+                OutputStream osToWrite = (OutputStream) FILTER_OUTPUT_STREAM_OUT.get(os);
+                if (osToWrite == null) {
+                    return os;
+                }
+                return new OutputStream() {
+                    @Override
+                    public void write(int b) throws IOException {
+                        osToWrite.write(b);
+                    }
+
+                    @Override
+                    public void write(byte[] b) throws IOException {
+                        osToWrite.write(b);
+                    }
+
+                    @Override
+                    public void write(byte[] b, int off, int len) throws IOException {
+                        osToWrite.write(b, off, len);
+                    }
+
+                    @Override
+                    public void flush() throws IOException {
+                        osToWrite.flush();
+                    }
+
+                    @Override
+                    public void close() throws IOException {
+                        // Close original output stream
+                        os.close();
+                    }
+                };
+            } catch (Exception e) {
+                // Use original output stream if we cannot unwrap it
+                return os;
+            }
+        }
+        return os;
     }
 
     @Override
